--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <!-- Home -->
    <Section id="sec1" data-text="section 1" class="main">
       <div class="container">
-          <h1>Hello i'am Jamal.</h1>
+          <h1>Hello i'am Jamal Pahlevi.</h1>
           <p>students who want to be front end developer</p>
       </div>
    </Section>
